Update header title to include current step

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="app">
     <header class="hero">
-      <h1>Schritt eins&nbsp;&nbsp;&nbsp;Schritt zwei&nbsp;&nbsp;&nbsp;Schritt drei</h1>
+        <h1 id="current-step-title">Schritt eins</h1>
     </header>
 
     <!-- Navigation zwischen den drei Seiten/Schritten -->
